Updated pull quote image to center block and changed fixed height to max width on mobile devices which is a little more flexible

--- a/css/toolkit.css
+++ b/css/toolkit.css
@@ -4762,7 +4762,7 @@ html.flexbox .infographic.module.window .infographic-label {
     padding-bottom: 20px;
   }
   .pull-quote-img img {
-    height: 300px;
+    max-width: 300px;
   }
 }
 .pull-quote-img-sm img {
