--- a/src/assets/toolkit/styles/partials/pull-quote.less
+++ b/src/assets/toolkit/styles/partials/pull-quote.less
@@ -34,7 +34,7 @@
     padding-bottom: 20px;
 
     img {
-      height: 300px;
+      max-width: 300px;
 	}
   }
 }
